testdata/corset/valid/fun_04.lisp
;;
(defcolumns (X :i16))
(defun (get) X)
(defconstraint c1 ()
  (== 0 (shift (get) -1)))
